css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');

:root {
  --cyan-600: #4d96a9;
  --cyan-300: #8fe3f9;
  --purple-600: #855fb1;
  --purple-300: #d9b8ff;
  --slate-900: #28283d;
  --slate-600: #87879d;
  --slate-300: #d1d1df;
  --white: #fafafa;
  --font-family: 'Red Hat Display', sans-serif;
}

.text_preset_1 {
  font-size: 54px;
  line-height: 110%;
  letter-spacing: 0px;
  font-family: var(--font-family);
  color: var(--slate-900);
}
.text_preset_2 {
  font-size: 35px;
  line-height: 110%;
  letter-spacing: 0px;
  font-family: var(--font-family);
}
.text_preset_3 {
  font-size: 16px;
  line-height: 110%;
  letter-spacing: 4px;
  font-family: var(--font-family);
}
.text_preset_4 {
  font-size: 18px;
  line-height: 110%;
  letter-spacing: 0px;
  font-family: var(--font-family);
}
.text_preset_4 {
  font-size: 16px;
  line-height: 150%;
  letter-spacing: 0px;
  font-family: var(--font-family);
}

* {
  margin: 0;
  padding: 0;
  outline: 0;
  box-sizing: border-box;
}

body {
  overflow-x: hidden;

  -webkit-font-smoothing: antialiased;
}

body,
input,
button {
  font-family: var(--font-family);
}

button {
  cursor: pointer;
}

a {
  text-decoration: none;
}

.container {
  width: 100%;
}

.logo_section {
  display: flex;
  justify-content: center;
  align-content: center;
  align-items: center;
  padding: 2rem;
  overflow-x: hidden;
}

.image_section {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  padding: 2rem;
}

.left_image, .right_image {
  width: 55%;
}

.cta_section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  text-align: center;
  width: 90%;
  margin: 2rem auto;
}

.cta_section p {
  color: var(--slate-600);
  text-align: center;
  font-size: 1.25rem;
}

.cta_buttons {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1.2rem;
}

.download_button {
  background-color: var(--cyan-600);
}
.button {
  padding: 1.5rem 3.5rem;
  /* background-color: var(--cyan-600); */
  color: var(--white);
  font-weight: bold;
  border-radius: 2rem;
}

.download_button span {
  color: var(--cyan-300);
}

.question_button {
  padding: 1rem 3rem;
  background-color: var(--purple-600);
  font-weight: bold;
  border-radius: 2rem;
  color: var(--white);
}

.info_section {
  width: 85%;
  margin: 2rem auto;
}

.line {
  width: 2px;
  height: 100px;
  background-color: var(--slate-300);
  padding: 0.07rem;
  margin: auto;
}

.circle {
  border: 2px solid var(--slate-300);
  border-radius: 50%;
  font-size: 16px;
  color: var(--slate-600);
  padding: 1rem;
  width: 15%;
  text-align: center;
  margin: auto;
}

.square_image_section {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  margin: 3rem auto;
}

.square_image_section img {
  width: 100%;
  border-radius: 1.2rem;
}

.top_layer_image,
.bottom_layer_image {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin: auto;
  gap: 1.2rem;
}

.info_note {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.info_note_headers {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  gap: 1rem;
}

.info_note_headers h3 {
  color: var(--cyan-600);
  text-transform: uppercase;
}

.info_note_headers h2 {
  color: var(--slate-900);
}

.info_note p {
  text-align: center;
  font-size: 1.1rem;
}

.footer_section {
  background-color: var(--cyan-600);
  background-image: url('../assets/mobile/image-footer.jpg');
  background-blend-mode: multiply;
  background-size: cover;
  margin-top: 10rem;
}
.footer_section .line {
  position: relative;
  bottom: 6rem;
}

.footer_section .circle {
  position: relative;
  bottom: 8rem;
  background-color: var(--white);
}

.footer_note {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--white);
  font-weight: bold;
  margin-inline: auto;
  text-align: center;
  width: 100%;
  gap: 1.5rem;
}

.footer_button {
  background-color: var(--purple-600);
  margin-bottom: 3rem;
}

.footer_button span {
  color: var(--purple-300);
}

@media screen and (min-width: 30rem) {
  .cta_section_and_image_section {
    flex-direction: column;
    display: flex;
  }
  .cta_section {
    max-width: 30rem;
  }

  .cta_buttons {
    flex-direction: revert;
  }

  .download_button {
    padding-block: 1rem;
  }

  .info_section .circle {
    width: 4%;
  }

  .info_note {
    max-width: 31rem;
    margin: auto;
  }

  .info_note h2 {
    width: 90%;
    margin: auto;
  }

  .footer_section {
    background-image: url('../assets/tablet/image-footer.jpg');
  }

  .footer_note {
    max-width: 34rem;
  }
}
.hidden_right_image,
.hidden_left_image {
  display: none;
}

@media screen and (min-width: 60rem) {
  .cta_section_and_image_section {
    flex-direction: row;
    display: flex;
  }
  .image_section {
    display: none;
  }
  .hidden_right_image,
  .hidden_left_image {
    display: flex;
    margin: auto;
  }

  .hidden_left_image {
    position: relative;
    right: 10rem;
  }

  .hidden_right_image {
    order: 3;
  }

  .circle {
    width: 5.5%;
  }

  .footer_section .circle {
    width: 3.4%;
  }

  .footer_section {
    background-image: url('../assets/desktop/image-footer.jpg');
  }

  .footer_note {
    flex-direction: revert;
    max-width: 80rem;
    padding-bottom: 3rem;
  }

  .footer_note h2,
  .footer_note p {
    text-align: left;
    max-width: 22rem;
  }

  .footer_button{
    margin-bottom: revert;
  }
}

